--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,11 @@ $back-color: #000;
   text-align: center;
 }
 
+.button{
+  border:1px solid black;
+    border-radius: 6px;
+    padding: 3px 10px;
+    width: 200px;
+    height: 30px;
+    cursor: pointer;
+}
