--- a/src/components/FormMap/FormMap.scss
+++ b/src/components/FormMap/FormMap.scss
@@ -1,5 +1,9 @@
-.yMaps{
-    max-width: 500px;
-    width: 100%;
-    height: 300px;
+
+.map-container{
+    flex: 1;
+}
+@media(max-width: 1080px){
+    .map-container{
+        width: 100%;
+    }
 }
