--- a/src/components/FormMap/FormMap.scss
+++ b/src/components/FormMap/FormMap.scss
@@ -1,8 +1,10 @@
 
 .map-container{
+    // display: flex;
+    // width: 100%;
     flex: 1;
 }
-@media(max-width: 1080px){
+@media(max-width: 900px){
     .map-container{
         width: 100%;
     }
