--- a/src/components/Rout/Rout.scss
+++ b/src/components/Rout/Rout.scss
@@ -25,8 +25,12 @@ gap: .5rem;
     gap: .2rem;
     cursor: pointer;
 }
-
-
+.auto_detail{
+    text-align: start;
+}
+.price_detail{
+    color: red
+}
 @media(max-width: 900px){
     .form-container{
         align-items: center;
