--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,13 @@ $back-color: #000;
     margin-top: 40px;
     cursor: pointer;
 }
+.input{
+  font-size: 16px;
+  padding: 6px 16px;
+  border-radius: 4px;
+  color:#7a7a7a;
+  border: 1px solid #818a91;
+  background-color: #F8F9F9;
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+  outline: 0;
+}
