--- a/src/components/FormMap/MapLayout.scss
+++ b/src/components/FormMap/MapLayout.scss
@@ -6,14 +6,25 @@
 }
 .inputs_container{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    // flex-wrap: wrap;
     gap: .5rem;
     padding: 1rem .5rem;
+    input{
+        flex: 1;
+        width: 100%;
+        // min-width: 250px;
+      
+    }
 }
 @media(max-width: 900px){
     .map-container{
         width: 100%;
+    }
+}
+@media(max-width: 500px){
+    .inputs_container{
+        flex-direction: column;
     }
 }
