--- a/src/App.scss
+++ b/src/App.scss
@@ -21,4 +21,5 @@ $back-color: #000;
   background-color: #F8F9F9;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
   outline: 0;
+  // width: 100%;
 }
