feat: add user detail part

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -3,4 +3,10 @@
     max-width: 1100px;
     margin: 0 auto;
 }
+.button-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:2rem;
+}
 
