--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -4,8 +4,9 @@
     gap: 1rem;
     margin-top: 2rem;
 }
-.notes, .user-data {
+.notes-container, .user-data {
     flex: 1;
+   
 }
 .user-data{
     display: flex;
@@ -15,7 +16,33 @@
     div{
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         flex:1;
         gap: 1rem;
+    }
+}
+.notes-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    // width: 100%;
+    .notes{
+        flex: 1;
+        width: 100%;
+    }
+}
+.payment-container{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+@media(max-width: 650px){
+    .user-data_container{
+        align-items: center;
+        flex-direction: column;
+    }
+    .note{
+        width: 100%;
     }
 }
