--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ $back-color: #000;
   background-color: #F8F9F9;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
   outline: 0;
-  // width: 100%;
+  width: -webkit-fill-available;
 }
 .label{
   display: flex;
