--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -1,16 +1,18 @@
+.details_container{
+    display: flex;
+    gap: 2rem;
+}
 .user-data_container{
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-top: 2rem;
-}
-.notes-container, .user-data {
+    flex-direction: column;
+    
     flex: 1;
    
 }
+
 .user-data{
     display: flex;
-    flex-wrap: wrap;
+ 
     gap: 1rem;
    
     div{
@@ -19,30 +21,37 @@
         align-items: flex-start;
         flex:1;
         gap: 1rem;
+        width: 100%;
     }
 }
 .notes-container{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    // width: 100%;
-    .notes{
-        flex: 1;
-        width: 100%;
-    }
+    gap:1rem;
+    width: 100%;
+ 
 }
-.payment-container{
+.payment-type-container{
+    flex: 1;
+    // width: -webkit-fill-available;
+    margin-top: 1rem;
+}
+.type-container{
     display: flex;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+   
 }
-@media(max-width: 650px){
-    .user-data_container{
-        align-items: center;
+@media(max-width: 900px){
+    .details_container{
+       
         flex-direction: column;
+        
     }
-    .note{
-        width: 100%;
+}
+@media(max-width: 510px){
+ 
+    .user-data{
+        flex-direction: column;
     }
 }
