--- a/src/components/FormMap/MapLayout.scss
+++ b/src/components/FormMap/MapLayout.scss
@@ -9,8 +9,9 @@
     align-items: center;
     justify-content: center;
     // flex-wrap: wrap;
-    gap: .5rem;
+    gap: 2rem;
     padding: 1rem .5rem;
+    margin-bottom: 1rem;
     input{
         flex: 1;
         width: 100%;
