--- a/src/components/FormMap/MapLayout.scss
+++ b/src/components/FormMap/MapLayout.scss
@@ -14,7 +14,7 @@
     margin-bottom: 1rem;
     input{
         flex: 1;
-        width: 100%;
+        // width: 100%;
         // min-width: 250px;
       
     }
