--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ $back-color: #000;
     padding: 3px 10px;
     width: 200px;
     height: 30px;
-    margin-top: 40px;
+    margin-top: 2rem;
     cursor: pointer;
 }
 .input{
@@ -27,4 +27,9 @@ $back-color: #000;
   display: flex;
   gap: .2rem;
   cursor: pointer;
+}
+.error{
+  color:red;
+  font-size: 14px;
+  min-height: 19px;
 }
