--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -33,6 +33,9 @@
     margin-top: 1rem;
  
 }
+.notes{
+    min-height: 4rem;
+}
 .payment-type-container{
     flex: 1;
     // width: -webkit-fill-available;
