feat: add loader, update styles

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,7 +1,14 @@
 .form-wrapper{
-    padding: 2rem 1rem;
-    max-width: 1100px;
-    margin: 0 auto;
+    position: relative;
+   
+    max-width: 1070px;
+    width: 100%;
+    // margin: 10px auto;
+    box-shadow: -19px 11px 22px -7px rgba(0, 0, 0, 0.16);
+    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+    margin: 2.5rem 1rem 0;
+    padding: 2.5rem 3rem;
+    background-color: blanchedalmond;
 }
 .button-container{
     display: flex;
@@ -10,3 +17,8 @@
     gap:2rem;
 }
 
+@media(max-width: 600px){
+    .form-wrapper{
+        padding: 2rem 1rem;        
+    }
+}
