--- a/src/components/Route/Rout.scss
+++ b/src/components/Route/Rout.scss
@@ -9,16 +9,19 @@
 .rout-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     flex: 1;
+    width: 100%;
+   
     
 
 }
 .auto-type{
-display: flex;
-flex-direction: column;
-width: 100%;
-gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: .8rem;
+    margin-bottom: 1rem;
 }
 
 .auto_detail{
@@ -29,8 +32,21 @@ gap: 1rem;
  
 }
 .hidden{
-  height: 0;
+    height: 0;
+    width: 0;
     visibility: hidden;
+    .button{
+        display: none;
+    }
+}
+
+.continue_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  
 }
 @media(max-width: 900px){
     .form-container{
