--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,29 @@
+@import "~bootstrap/scss/bootstrap";
 $back-color: #000;
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
 }
 
 .button{
-  border:1px solid black;
-    border-radius: 6px;
-    padding: 3px 10px;
-    width: 200px;
-    height: 30px;
+    border:1px solid black;    
+    font-size: 18px;
     margin-top: 2rem;
-    cursor: pointer;
+    padding: 1rem 2.5rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #FDC501;
+    color: #ffffff;
+
+    flex-basis: auto;
+    transition: .5s ease;
+    &:hover{
+      background-color: #3E4756;
+    }
 }
 .input{
-  font-size: 16px;
   padding: 6px 16px;
   border-radius: 4px;
   color:#363434;
@@ -25,11 +35,20 @@ $back-color: #000;
 }
 .label{
   display: flex;
-  gap: .2rem;
+  gap: .3rem;
+  color:#7a7a7a;
   cursor: pointer;
 }
 .error{
   color:red;
   font-size: 14px;
-  min-height: 19px;
+  height: 23px;
+  padding: 2px 0;
+}
+.title{
+  margin-bottom: 1rem;
+}
+.subtitle{
+  word-wrap:break-word;
+  text-align: center;
 }
