--- a/src/components/FormMap/MapLayout.scss
+++ b/src/components/FormMap/MapLayout.scss
@@ -8,16 +8,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    width: 100%;
     // flex-wrap: wrap;
-    gap: 2rem;
+    gap: 1.5rem;
     padding: 1rem .5rem;
     margin-bottom: 1rem;
     input{
-        flex: 1;
+        // flex: 1;
         // width: 100%;
         // min-width: 250px;
       
     }
+}
+.form-control, .to-control{
+    position: relative;
+    background-image: url('../../assets/map-gps.svg');
+    background-size: 20px 20px; 
+    background-repeat: no-repeat;
+    background-position: 99%;
+   
 }
 @media(max-width: 900px){
     .map-container{
