--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -1,6 +1,9 @@
 .details_container{
+    position: relative;
     display: flex;
     gap: 2rem;
+    margin-bottom: 2rem;
+    z-index: 2;
 }
 .user-data_container{
     display: flex;
@@ -11,8 +14,7 @@
 }
 
 .user-data{
-    display: flex;
- 
+    display: flex; 
     gap: 2rem;
    
     div{
@@ -20,7 +22,7 @@
         flex-direction: column;
         align-items: flex-start;
         flex:1;
-        gap: 1rem;
+        // gap: 1rem;
         width: 100%;
     }
 }
@@ -28,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem;
+    // gap: 1rem;
     width: 100%;
     margin-top: 1rem;
  
@@ -46,6 +48,35 @@
     flex-direction: column;
     gap: 1rem;
    
+}
+input[name="name"]{
+    position: relative;
+    background-image: url('../../assets/user-name.svg');
+    background-size: 20px 20px; 
+    background-repeat: no-repeat;
+    background-position: 99%;
+    // filter: invert(77%) sepia(27%) saturate(3471%) hue-rotate(2deg) brightness(106%) contrast(99%);
+}
+input[name="email"]{
+    position: relative;
+    background-image: url('../../assets/email.svg');
+    background-size: 20px 20px; 
+    background-repeat: no-repeat;
+    background-position: 99%;
+}
+input[name="phone"]{
+    position: relative;
+    background-image: url('../../assets/phone.svg');
+    background-size: 20px 20px; 
+    background-repeat: no-repeat;
+    background-position: 99%;
+}
+input[name="date"]{
+    position: relative;
+    background-image: url('../../assets/calendar-symbol.svg');
+    background-size: 20px 20px; 
+    background-repeat: no-repeat;
+    background-position: 99%;
 }
 @media(max-width: 900px){
     .details_container{
