--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $back-color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .button{
@@ -51,4 +51,7 @@ $back-color: #000;
 .subtitle{
   word-wrap:break-word;
   text-align: center;
+}
+.nowrap{
+  white-space: nowrap;
 }
