--- a/src/components/Route/Rout.scss
+++ b/src/components/Route/Rout.scss
@@ -35,6 +35,7 @@
     height: 0;
     width: 0;
     visibility: hidden;
+    display: none;
     .button{
         display: none;
     }
@@ -52,5 +53,6 @@
     .form-container{
         align-items: center;
         flex-direction: column;
+        gap: 2rem;
     }
 }
