--- a/src/App.scss
+++ b/src/App.scss
@@ -31,10 +31,13 @@ $back-color: #000;
   background-color: #F8F9F9;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
   outline: 0;
+  min-height: 47px;
   width: -webkit-fill-available;
 }
 .label{
   display: flex;
+  align-items: center;
+  justify-content: start;
   gap: .3rem;
   color:#7a7a7a;
   cursor: pointer;
