--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -3,6 +3,8 @@
    
     max-width: 1070px;
     width: 100%;
+    min-height: 620px;
+    height: 100%;
     // margin: 10px auto;
     box-shadow: -19px 11px 22px -7px rgba(0, 0, 0, 0.16);
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
