fix: fix styles

--- a/src/components/Route/Rout.scss
+++ b/src/components/Route/Rout.scss
@@ -3,7 +3,7 @@
     align-items: baseline;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 10%;
     
 }
 .rout-container{
