fix: fix styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,7 +37,7 @@ $back-color: #000;
 .label{
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   gap: .3rem;
   color:#7a7a7a;
   cursor: pointer;
