--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 $back-color: #000;
+$color1: #f4f4f4;
+$color2: #FDC501;
 .App {
   display: flex;
   align-items: center;
@@ -35,10 +37,10 @@ $back-color: #000;
   width: -webkit-fill-available;
 }
 .label{
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: .3rem;
+  // display: flex;
+  // align-items: center;
+  // justify-content: flex-start;
+  // gap: .3rem;
   color:#7a7a7a;
   cursor: pointer;
 }
@@ -57,4 +59,61 @@ $back-color: #000;
 }
 .nowrap{
   white-space: nowrap;
+}
+.form_radio {
+  margin: 0.4rem 0;
+  input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    + .radio-label {
+      &:before {
+        content: '';
+        background:  $color1;
+        border-radius: 100%;
+        border: 1px solid darken( $color1, 25%);
+        display: inline-block;
+        width: 1.4em;
+        height: 1.4em;
+        position: relative;
+        top: .1rem;
+        margin-right: 1em; 
+        vertical-align: top;
+        cursor: pointer;
+        text-align: center;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
+      + .radio-label {
+        &:before {
+          background-color: $color2;
+          box-shadow: inset 0 0 0 4px $color1;
+        }
+      }
+    }
+    &:focus {
+      + .radio-label {
+        &:before {
+          outline: none;
+          border-color: $color2;
+        }
+      }
+    }
+    &:disabled {
+      + .radio-label {
+        &:before {
+          box-shadow: inset 0 0 0 4px $color1;
+          border-color: darken($color1, 25%);
+          background: darken( $color1, 25%);
+        }
+      }
+    }
+    + .radio-label {
+      &:empty {
+        &:before {
+          margin-right: 0;
+        }
+      }
+    }
+  }
 }
