--- a/src/components/Route/Rout.scss
+++ b/src/components/Route/Rout.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: .8rem;
+    // gap: .5rem;
     margin-bottom: 1rem;
 }
 
@@ -47,9 +47,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    p{
+        margin-bottom: 0.5rem;
+    }
   
 }
-@media(max-width: 900px){
+@media(max-width: 940px){
     .form-container{
         align-items: center;
         flex-direction: column;
