feat: add notification component

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,10 +37,8 @@ $color2: #FDC501;
   width: -webkit-fill-available;
 }
 .label{
-  // display: flex;
-  // align-items: center;
-  // justify-content: flex-start;
-  // gap: .3rem;
+ 
+  width: 100%;
   color:#7a7a7a;
   cursor: pointer;
 }
