--- a/src/components/FormMap/MapLayout.scss
+++ b/src/components/FormMap/MapLayout.scss
@@ -21,7 +21,7 @@
       
     }
 }
-.form-control, .to-control{
+.from-control, .to-control{
     position: relative;
     background-image: url('../../assets/map-gps.svg');
     background-size: 20px 20px; 
