--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -1,3 +1,4 @@
+
 .details_container{
     position: relative;
     display: flex;
@@ -7,10 +8,8 @@
 }
 .user-data_container{
     display: flex;
-    flex-direction: column;
-    
-    flex: 1;
-   
+    flex-direction: column;    
+    flex: 1;   
 }
 
 .user-data{
@@ -22,7 +21,6 @@
         flex-direction: column;
         align-items: flex-start;
         flex:1;
-        // gap: 1rem;
         width: 100%;
     }
 }
@@ -30,9 +28,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    // gap: 1rem;
     width: 100%;
-    // margin-top: 1rem;
  
 }
 .notes{
@@ -40,49 +36,46 @@
 }
 .payment-type-container{
     flex: 1;
-    // width: -webkit-fill-available;
  
 }
 .type-container{
     display: flex;
     flex-direction: column;
-    // gap: .5rem;
    
 }
-input[name="name"]{
+@mixin inputIcon ($img){
     position: relative;
-    background-image: url('../../assets/user-name.svg');
-    background-size: 20px 20px; 
-    background-repeat: no-repeat;
-    background-position: 99%;
- 
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 4px;
+        margin: auto 0;
+        width: 20px;
+        height: 20px;
+        background: $img no-repeat;
+        background-size: cover;
+      
+      } 
 }
-input[name="email"]{
-    position: relative;
-    background-image: url('../../assets/email.svg');
-    background-size: 20px 20px; 
-    background-repeat: no-repeat;
-    background-position: 99%;
+.name-input{
+    @include inputIcon(url('../../assets/user-name.svg'));  
 }
-input[name="phone"]{
-    position: relative;
-    background-image: url('../../assets/phone.svg');
-    background-size: 20px 20px; 
-    background-repeat: no-repeat;
-    background-position: 99%;
+
+.email-input{
+    @include inputIcon(url('../../assets/email.svg'));  
 }
-input[name="date"]{
-    position: relative;
-    background-image: url('../../assets/calendar-symbol.svg');
-    background-size: 20px 20px; 
-    background-repeat: no-repeat;
-    background-position: 99%;
+.phone-input{  
+    @include inputIcon(url('../../assets/phone.svg'));   
 }
+.date-input{
+    @include inputIcon(url('../../assets/calendar-symbol.svg')); 
+}
+
 @media(max-width: 940px){
-    .details_container{
-       
-        flex-direction: column;
-        
+    .details_container{      
+        flex-direction: column;        
     }
 }
 @media(max-width: 580px){
