--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
+@use './shared/styles/colors';
 @import "~bootstrap/scss/bootstrap";
-$back-color: #000;
-$color1: #f4f4f4;
-$color2: #FDC501;
+
+
+
 .App {
   display: flex;
   align-items: center;
@@ -10,28 +11,27 @@ $color2: #FDC501;
 }
 
 .button{
-    border:1px solid black;    
+    border:1px solid colors.$back-color;    
     font-size: 18px;
     margin-top: 2rem;
     padding: 1rem 2.5rem;
     border-radius: 5px;
     border: none;
-    background-color: #FDC501;
-    color: #ffffff;
-
+    background-color: colors.$btn-color;
+    color: colors.$wite-color;
     flex-basis: auto;
     transition: .5s ease;
     &:hover{
-      background-color: #3E4756;
+      background-color:colors.$middle-grey-color;
     }
 }
 .input{
   padding: 6px 16px;
   border-radius: 4px;
-  color:#363434;
-  border: 1px solid #818a91;
-  background-color: #F8F9F9;
-  box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+  color:colors.$dark-gray-color;
+  border: 1px solid colors.$lite-gray-color;
+  background-color:colors.$background-input-color;
+  box-shadow: inset 0 0 0 1px colors.$shadow-calor;
   outline: 0;
   min-height: 47px;
   width: -webkit-fill-available;
@@ -39,11 +39,11 @@ $color2: #FDC501;
 .label{
  
   width: 100%;
-  color:#7a7a7a;
+  color: colors.$subtitle-color;
   cursor: pointer;
 }
 .error{
-  color:red;
+  color: colors.$error-color;
   font-size: 14px;
   height: 23px;
   padding: 2px 0;
@@ -66,9 +66,9 @@ $color2: #FDC501;
     + .radio-label {
       &:before {
         content: '';
-        background:  $color1;
+        background:  colors.$input-color;
         border-radius: 100%;
-        border: 1px solid darken( $color1, 25%);
+        border: 1px solid darken( colors.$input-color, 25%);
         display: inline-block;
         width: 1.4em;
         height: 1.4em;
@@ -84,8 +84,8 @@ $color2: #FDC501;
     &:checked {
       + .radio-label {
         &:before {
-          background-color: $color2;
-          box-shadow: inset 0 0 0 4px $color1;
+          background-color: colors.$btn-color;
+          box-shadow: inset 0 0 0 4px colors.$input-color;
         }
       }
     }
@@ -93,16 +93,16 @@ $color2: #FDC501;
       + .radio-label {
         &:before {
           outline: none;
-          border-color: $color2;
+          border-color: colors.$btn-color;
         }
       }
     }
     &:disabled {
       + .radio-label {
         &:before {
-          box-shadow: inset 0 0 0 4px $color1;
-          border-color: darken($color1, 25%);
-          background: darken( $color1, 25%);
+          box-shadow: inset 0 0 0 4px colors.$input-color;
+          border-color: darken(colors.$input-color, 25%);
+          background: darken( colors.$input-color, 25%);
         }
       }
     }
