--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,22 +1,19 @@
+@use '../../shared/styles/colors';
+@use '../../shared/styles/mixins';
 .form-wrapper{
-    position: relative;
-   
+    position: relative;   
     max-width: 1070px;
     width: 100%;
     min-height: 620px;
     height: 100%;
-    // margin: 10px auto;
-    box-shadow: -19px 11px 22px -7px rgba(0, 0, 0, 0.16);
+    box-shadow: -19px 11px 22px -7px colors.$shadow-calor2;
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
     margin: 2.5rem 1rem 0;
     padding: 2.5rem 3rem;
-    background-color: blanchedalmond;
 }
 .button-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap:2rem;
+    @include mixins.flex;
+    gap: 2rem;
 }
 
 @media(max-width: 600px){
