--- a/src/components/FormMap/MapLayout.scss
+++ b/src/components/FormMap/MapLayout.scss
@@ -1,25 +1,17 @@
-
+@use '../../shared/styles/mixins';
 .map-container{
-    // display: flex;
-    // width: 100%;
     flex: 1;
 }
 .inputs_container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include mixins.flex;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     flex-direction: column;
     width: 100%;
-    // flex-wrap: wrap;
     gap: 1.5rem;
     padding: 1rem .5rem;
-    margin-bottom: 1rem;
-    input{
-        // flex: 1;
-        // width: 100%;
-        // min-width: 250px;
-      
-    }
+    margin-bottom: 1rem;   
 }
 .from-control, .to-control{
     position: relative;
