--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -24,6 +24,7 @@
         align-items: flex-start;
         flex:1;
         width: 100%;
+        margin-bottom: 1.5rem;
     }
 }
 .notes-container{
