--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -24,7 +24,10 @@
         align-items: flex-start;
         flex:1;
         width: 100%;
-        margin-bottom: 1.5rem;
+        
+        div{
+            margin-bottom: 1.5rem;
+        }
     }
 }
 .notes-container{
@@ -63,7 +66,8 @@
 
 @media(max-width: 940px){
     .details_container{      
-        flex-direction: column;        
+        flex-direction: column; 
+        gap: 2rem;       
     }
 }
 @media(max-width: 580px){
