--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -8,8 +8,9 @@
     height: 100%;
     box-shadow: -19px 11px 22px -7px colors.$shadow-calor2;
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-    margin: 2.5rem 1rem 0;
+    margin: 2.5rem 0 1rem;
     padding: 2.5rem 3rem;
+    background-color: colors.$wite-color;
 }
 .button-container{
     @include mixins.flex;
