--- a/src/components/UserData/UserData.scss
+++ b/src/components/UserData/UserData.scss
@@ -6,7 +6,7 @@
     display: flex;
     gap: 5%;
     margin-bottom: 1rem;
-    z-index: 2;
+    z-index: 1;
 }
 .user-data_container{
     display: flex;
@@ -49,7 +49,9 @@
     flex-direction: column;
    
 }
-
+.user-data_label{
+    margin-bottom: .5rem;
+}
 .name-input{
     @include mixins.inputIcon(url('../../assets/user-name.svg'));  
 }
