--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -1,16 +1,15 @@
 @mixin inputIcon ($img){
     position: relative;
     &:before {
-        content: '';
+        content: $img	;
         position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 4px;
-        margin: auto 0;
+       
+        top: 50%;
+        transform: translateY(-50%);
+        right: 8px;
+      
         width: 20px;
-        height: 20px;
-        background: $img no-repeat;
-        background-size: cover;
+      
       
       } 
 }
